Added action management scaffolding